test/libyul/yulSyntaxTests/linkersymbol_bad_literal.yul
{
    pop(linkersymbol(0))
    pop(linkersymbol(true))
    pop(linkersymbol(false))
}
// ====
// dialect: evm
// ----
// TypeError 5859: (23-24): Function expects string literal.
// TypeError 5859: (48-52): Function expects string literal.
// TypeError 5859: (76-81): Function expects string literal.
